--- a/spring-ai-image-demo/src/main/resources/application.yml
+++ b/spring-ai-image-demo/src/main/resources/application.yml
@@ -4,5 +4,5 @@ server:
 spring:
   ai:
     openai:
-      base-url: https://api.openai.com
-      api-key: sk-W9kYeE3xxxxxxxxB96fAd460353Dc7a
+      base-url: https://api.mnzdna.xyz
+      api-key: sk-W9kYxxxxxxxxxxxxxxxx6fAd460353Dc7a
