添加Vue3对接流式接口博客文章

--- a/spring-ai-v1-stream-chat-demo/src/main/resources/application.yml
+++ b/spring-ai-v1-stream-chat-demo/src/main/resources/application.yml
@@ -5,8 +5,9 @@ server:
 spring:
   ai:
     openai:
-      api-key: sk-zk2503xxxxxxxxxxxxxxxxxxxcf6613f975d2750
-      base-url: https://api.example.com
+      api-key: sk-zk2503axxxxxxxxxxxxcf6613f975d2750
+
+      base-url: https://flag.example.com
   mvc:
     view:
       prefix: classpath:/static/
