--- a/spring-ai-chat-demo/pom.xml
+++ b/spring-ai-chat-demo/pom.xml
@@ -4,7 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-
+    <parent>
+        <groupId>org.ningning0111</groupId>
+        <artifactId>spring-ai-demo</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+    
     <artifactId>spring-ai-chat-demo</artifactId>
 
     <properties>
